--- a/TorrLogger/TorrLogger.csproj
+++ b/TorrLogger/TorrLogger.csproj
@@ -62,7 +62,6 @@
     </Compile>
     <Compile Include="Managers\TorrentsManager.cs" />
     <Compile Include="Managers\ViewManager.cs" />
-    <Compile Include="Models\TorrentModel.cs" />
     <Compile Include="ViewModels\ClientViewModel.cs" />
     <Compile Include="ViewModels\TorrentViewModel.cs" />
     <Page Include="ImportWindow.xaml">
@@ -109,7 +108,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\AppIcon.ico" />
   </ItemGroup>
